# ZSE

./: .gitignore  Cargo.toml  LICENSE  README.md  log_BVC.txt  log_RCNZ 2.txt  log_RCNZ.txt  log_ZSE.txt  log_bfb 2.txt  log_bfb.txt  textdump.txt
.cargo/: config.toml
src/: broken_visualizer.rs  common.rs  coolvisualizer.rs  file.txt  filereader.rs  lib.rs  main.rs  market.rs  rimuovere.rs  rocket.rs  tests.rs  trader.rs  trader_balordo.rs  wrapper.rs
