[package]
name = "ZSE"

version = "0.2.0"
edition = "2021"

authors = ["Stefano Dal Mas, Andy Ion Ditu, Marina Segala"]
publish = ["kellnr"]
exclude = [".DS_Store"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unitn_market_2022 = {version = "1.0.10", registry = "kellnr"}
rand = "0.8.5"
sha256 = "1.1.1"
chrono = "0.4.23"

rcnz_market = {version = "0.1.0", registry = "kellnr"}
bfb = {version = "0.1.2", registry = "kellnr"}
BVC = {version = "0.1.9", registry = "kellnr"}